NM1. fix redundant matrix usage in LU-decomposition

--- a/NM1/lab.ipynb
+++ b/NM1/lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 1,
    "id": "851371ef",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 2,
    "id": "69565d45",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def decompose_column(matrix, column):\n",
@@ -65,6 +65,16 @@
     "        l_matrix_column[row, 0] = l_matrix_value\n",
     "        matrix[row, :] += matrix[column, :] * (-l_matrix_value)\n",
     "        #log_step(column, matrix, row)\n",
+    "    return l_matrix_column\n",
+    "\n",
+    "def decompose_column_lu(matrix, column):\n",
+    "    l_matrix_column = np.zeros(shape[0])\n",
+    "    for row in range (column + 1, shape[0]):\n",
+    "        l_matrix_value = (matrix[row, column] / matrix[column, column])\n",
+    "        l_matrix_column[row] = l_matrix_value\n",
+    "        matrix[row, column:] += matrix[column, column:] * (-l_matrix_value)\n",
+    "        #log_step(column, matrix, row)\n",
+    "    matrix[:, column] += l_matrix_column\n",
     "    return l_matrix_column\n",
     "\n",
     "\n",
@@ -81,26 +91,21 @@
     "            return column, row\n",
     "\n",
     "def decompose_matrix_with_gauss(matrix):\n",
+    "    print(\"original memory\")\n",
+    "    print(matrix.nbytes)\n",
     "    b_column_to_swap = np.copy(matrix[:, shape[1] - 1].reshape(shape[0], 1))\n",
-    "    l_matrix = None\n",
     "\n",
     "    for column in range(0, shape[1] - 1):\n",
     "        if matrix[column, column] == 0:\n",
     "            row_swap_1, row_swap_2 = get_matrix_with_non_zero_leading_element(matrix, column)\n",
     "\n",
-    "            l_matrix[[row_swap_1, row_swap_2]] = l_matrix[[row_swap_2, row_swap_1]]\n",
     "            b_column_to_swap[[row_swap_1, row_swap_2]] = b_column_to_swap[[row_swap_2, row_swap_1]]\n",
     "\n",
-    "        l_matrix_column = decompose_column(matrix, column)\n",
+    "        decompose_column_lu(matrix, column)\n",
     "\n",
-    "        if l_matrix is None:\n",
-    "            l_matrix = l_matrix_column\n",
-    "        else:\n",
-    "            l_matrix = np.hstack((l_matrix, l_matrix_column))\n",
-    "\n",
-    "    np.fill_diagonal(l_matrix, 1)\n",
-    "\n",
-    "    return matrix, l_matrix, b_column_to_swap\n",
+    "    print(\"u memory\")\n",
+    "    print(matrix.nbytes)\n",
+    "    return matrix, b_column_to_swap\n",
     "\n",
     "def solve_lz_equation(matrix):\n",
     "    answer = []\n",
@@ -131,10 +136,12 @@
     "\n",
     "\n",
     "def solve_with_lu(matrix):\n",
-    "    u_matrix, l_matrix, swapped_b_column = decompose_matrix_with_gauss(matrix)\n",
-    "    log_matrices(l_matrix, u_matrix)\n",
-    "    lz_matrix = np.hstack((l_matrix, swapped_b_column))\n",
-    "    z_answer = solve_lz_equation(lz_matrix)\n",
+    "    u_matrix, swapped_b_column = decompose_matrix_with_gauss(matrix)\n",
+    "    log_matrix(u_matrix)\n",
+    "    #lz_matrix = np.hstack((l_matrix, swapped_b_column))\n",
+    "    u_matrix = np.delete(u_matrix, -1, axis=1)\n",
+    "    u_matrix = np.hstack((u_matrix, swapped_b_column))\n",
+    "    z_answer = solve_lz_equation(u_matrix)\n",
     "    z_column = np.array(z_answer, dtype=float).reshape((shape[0], 1))\n",
     "    u_matrix = np.delete(u_matrix, -1, axis=1)\n",
     "    determinant = np.diagonal(u_matrix).prod()\n",
@@ -168,12 +175,9 @@
     "        matrix[row, :] += matrix[column, :] * (-l_matrix_value)\n",
     "\n",
     "\n",
-    "def log_matrices(l_matrix, u_matrix):\n",
+    "def log_matrix(u_matrix):\n",
     "    print(\"u matrix\")\n",
     "    print(u_matrix)\n",
-    "    print('\\n')\n",
-    "    print(\"l matrix\")\n",
-    "    print(l_matrix)\n",
     "    print('\\n')"
    ],
    "metadata": {
@@ -182,24 +186,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "original memory\n",
+      "160\n",
+      "u memory\n",
+      "160\n",
       "u matrix\n",
       "[[  -7.       3.      -4.       7.    -126.   ]\n",
-      " [   0.       2.429  -11.571   14.    -115.   ]\n",
-      " [   0.       0.      59.118  -71.118  473.824]\n",
-      " [   0.       0.       0.     -16.418   82.09 ]]\n",
-      "\n",
-      "\n",
-      "l matrix\n",
-      "[[ 1.     0.     0.     0.   ]\n",
-      " [-1.143  1.     0.     0.   ]\n",
-      " [-1.286  5.294  1.     0.   ]\n",
-      " [ 1.    -4.941 -1.035  1.   ]]\n",
+      " [  -1.143    2.429  -11.571   14.    -115.   ]\n",
+      " [  -1.286    5.294   59.118  -71.118  473.824]\n",
+      " [   1.      -4.941   -1.035  -16.418   82.09 ]]\n",
       "\n",
       "\n",
       "determinant\n",
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def solve_sweep(matrix):\n",
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -348,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def check_diagonal_dominance(matrix):\n",
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -475,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "def solve_zeidel(matrix, eps):\n",
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -541,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -564,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "def solve_rotations(matrix, eps):\n",
@@ -620,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -662,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -685,12 +686,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "def solve_qr(matrix, eps):\n",
     "    a = matrix\n",
+    "    iterations = 0\n",
     "    while True:\n",
+    "        iterations += 1\n",
     "        h_matrices = []\n",
     "        r = a\n",
     "        for column in range(shape[1] - 1):\n",
@@ -702,6 +705,8 @@
     "        q = multiply_matrices(h_matrices)\n",
     "        a = np.matmul(r, q)\n",
     "        if is_accuracy_achieved(a, eps):\n",
+    "            print(\"iterations:\")\n",
+    "            print(iterations)\n",
     "            return np.diagonal(a)\n",
     "\n",
     "def get_v_vector(matrix, column):\n",
@@ -734,13 +739,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "eigenvalues\n",
+      "iterations:\n",
+      "9\n",
       "[ 6.39   3.834 -1.224]\n"
      ]
     }
@@ -749,15 +756,6 @@
     "print(\"eigenvalues\")\n",
     "print(solve_qr(matrix_array, 0.01))"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
