NM1. dont return column from decompose_column_lu

--- a/NM1/lab.ipynb
+++ b/NM1/lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "851371ef",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "69565d45",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def decompose_column(matrix, column):\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
@@ -261,10 +261,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "def solve_sweep(matrix):\n",
+    "    if not check_tri_diagonal_dominance(matrix):\n",
+    "        return\n",
+    "\n",
     "    p = []\n",
     "    q = []\n",
     "\n",
@@ -287,6 +290,12 @@
     "    print(q)\n",
     "    return np.array(answer)\n",
     "\n",
+    "def check_tri_diagonal_dominance(matrix):\n",
+    "    for i in range(shape[0]):\n",
+    "        if abs(b_i(matrix, i)) < (abs(a_i(matrix, i)) + abs(c_i(matrix, i))):\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
     "def p_i(matrix, i, p):\n",
     "    return -c_i(matrix, i) / (b_i(matrix, i) + a_i(matrix, i) * p[i - 1])\n",
     "\n",
@@ -297,6 +306,8 @@
     "    return p[i] * answer[i + 1] + q[i]\n",
     "\n",
     "def a_i(matrix, i):\n",
+    "    if i == 0:\n",
+    "        return 0\n",
     "    return matrix[i, i - 1]\n",
     "\n",
     "def b_i(matrix, i):\n",
@@ -316,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
@@ -348,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stdout",
@@ -372,17 +383,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "outputs": [],
    "source": [
     "def check_diagonal_dominance(matrix):\n",
     "    shape = matrix.shape\n",
-    "    row_sum = np.sum(np.abs(matrix), axis=1)\n",
     "    for row in range (shape[0]):\n",
-    "        if np.abs(matrix[row, row]) <= (row_sum[row] - np.abs(matrix[row, -1]) - np.abs(matrix[row, row])):\n",
+    "        if not (row_dominance(matrix, row) or column_dominance(matrix, row)):\n",
     "            return False\n",
     "\n",
     "    return True\n",
+    "\n",
+    "def row_dominance(matrix, row):\n",
+    "    row_sum = np.sum(np.abs(matrix), axis=1)\n",
+    "    return np.abs(matrix[row, row]) >= (row_sum[row] - np.abs(matrix[row, -1]) - np.abs(matrix[row, row]))\n",
+    "\n",
+    "def column_dominance(matrix, column):\n",
+    "    column_sum = np.sum(np.abs(matrix), axis=0)\n",
+    "    return abs(matrix[column, column]) >= column_sum[column] - abs(matrix[column, column])\n",
+    "\n",
     "\n",
     "def solve_iterations(matrix, eps):\n",
     "    if not check_diagonal_dominance(matrix):\n",
@@ -442,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "outputs": [
     {
      "name": "stdout",
@@ -475,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "outputs": [],
    "source": [
     "def solve_zeidel(matrix, eps):\n",
@@ -508,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "outputs": [
     {
      "name": "stdout",
@@ -541,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "outputs": [
     {
      "name": "stdout",
@@ -564,10 +583,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "def solve_rotations(matrix, eps):\n",
+    "    if not check_symmetry(matrix):\n",
+    "        return\n",
+    "\n",
     "    a = np.copy(matrix)\n",
     "    rotation_matrices = []\n",
     "    iterations = 0\n",
@@ -583,6 +605,9 @@
     "            a = a_k\n",
     "            rotation_matrices.append(rotation_matrix)\n",
     "            iterations += 1\n",
+    "\n",
+    "def check_symmetry(matrix):\n",
+    "    return np.allclose(matrix, matrix.T)\n",
     "\n",
     "\n",
     "def get_position_of_max_non_diagonal_element(matrix):\n",
@@ -620,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "outputs": [
     {
      "name": "stdout",
@@ -662,20 +687,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 121,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 5. -1. -2.]\n",
-      " [-4.  3. -3.]\n",
-      " [-2. -1.  1.]]\n"
+      "[[4. 2. 1.]\n",
+      " [2. 5. 3.]\n",
+      " [1. 3. 6.]]\n"
      ]
     }
    ],
    "source": [
-    "matrix_array = np.loadtxt('matrix_qr')\n",
+    "matrix_array = np.loadtxt('matrix_rotations')\n",
     "print(matrix_array)\n",
     "shape = matrix_array.shape"
    ],
@@ -685,12 +710,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 123,
    "outputs": [],
    "source": [
     "def solve_qr(matrix, eps):\n",
     "    a = matrix\n",
     "    iterations = 0\n",
+    "    q_matrices = []\n",
     "    while True:\n",
     "        iterations += 1\n",
     "        h_matrices = []\n",
@@ -701,8 +727,8 @@
     "            h_matrices.append(h)\n",
     "            r = np.matmul(h, r)\n",
     "\n",
-    "        q = multiply_matrices(h_matrices)\n",
-    "        a = np.matmul(r, q)\n",
+    "        q_matrices.append( multiply_matrices(h_matrices))\n",
+    "        a = np.matmul(r, q_matrices[-1])\n",
     "        if is_accuracy_achieved(a, eps):\n",
     "            print(\"iterations:\")\n",
     "            print(iterations)\n",
@@ -726,6 +752,14 @@
     "\n",
     "    return result\n",
     "\n",
+    "def multiply_reversed(matrices):\n",
+    "    result = matrices[-1]\n",
+    "    if len(matrices) > 1:\n",
+    "        for i in reversed(range(0, len(matrices) - 1)):\n",
+    "            result = np.matmul(result, matrices[i])\n",
+    "\n",
+    "    return result\n",
+    "\n",
     "def is_accuracy_achieved(matrix, eps):\n",
     "    sum_of_subdiagonal_elements = 0\n",
     "    for i in range(1, shape[0]):\n",
@@ -738,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 123,
    "outputs": [
     {
      "name": "stdout",
@@ -746,15 +780,24 @@
      "text": [
       "eigenvalues\n",
       "iterations:\n",
-      "9\n",
-      "[ 6.39   3.834 -1.224]\n"
+      "19\n",
+      "[9.348 3.73  1.921]\n"
      ]
     }
    ],
    "source": [
     "print(\"eigenvalues\")\n",
-    "print(solve_qr(matrix_array, 0.01))"
+    "print(solve_qr(matrix_array, 0.00001))"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
