--- a/NM1/lab.ipynb
+++ b/NM1/lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "851371ef",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "69565d45",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def decompose_column(matrix, column):\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def solve_sweep(matrix):\n",
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def check_diagonal_dominance(matrix):\n",
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "def solve_zeidel(matrix, eps):\n",
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "def solve_rotations(matrix, eps):\n",
@@ -645,25 +645,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "iterations\n",
-      "3\n",
+      "6\n",
       "eigenvalues\n",
-      "[3.735 1.921 9.343]\n",
+      "[3.73  1.921 9.348]\n",
       "eigenvectors\n",
-      "[ 0.785  0.217 -0.58 ],\n",
-      "[-0.505  0.768 -0.395],\n",
-      "[0.36  0.603 0.712],\n"
+      "[ 0.776  0.195 -0.6  ],\n",
+      "[-0.515  0.746 -0.423],\n",
+      "[0.365 0.637 0.679],\n"
      ]
     }
    ],
    "source": [
-    "eigenvalues, eigenvectors, iterations = solve_rotations(matrix_array, 0.3)\n",
+    "eigenvalues, eigenvectors, iterations = solve_rotations(matrix_array, 0.00001)\n",
     "print(\"iterations\")\n",
     "print(iterations)\n",
     "print(\"eigenvalues\")\n",
@@ -687,20 +687,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4. 2. 1.]\n",
-      " [2. 5. 3.]\n",
-      " [1. 3. 6.]]\n"
+      "[[ 5. -1. -2.]\n",
+      " [-4.  3. -3.]\n",
+      " [-2. -1.  1.]]\n"
      ]
     }
    ],
    "source": [
-    "matrix_array = np.loadtxt('matrix_rotations')\n",
+    "matrix_array = np.loadtxt('matrix_qr')\n",
     "print(matrix_array)\n",
     "shape = matrix_array.shape"
    ],
@@ -710,13 +710,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 18,
    "outputs": [],
    "source": [
     "def solve_qr(matrix, eps):\n",
     "    a = matrix\n",
     "    iterations = 0\n",
-    "    q_matrices = []\n",
+    "    pQ = np.eye(matrix.shape[0])\n",
     "    while True:\n",
     "        iterations += 1\n",
     "        h_matrices = []\n",
@@ -727,12 +727,13 @@
     "            h_matrices.append(h)\n",
     "            r = np.matmul(h, r)\n",
     "\n",
-    "        q_matrices.append( multiply_matrices(h_matrices))\n",
-    "        a = np.matmul(r, q_matrices[-1])\n",
+    "        q = multiply_matrices(h_matrices)\n",
+    "        a = np.matmul(r, q)\n",
+    "        pQ = np.matmul(pQ, q)\n",
     "        if is_accuracy_achieved(a, eps):\n",
     "            print(\"iterations:\")\n",
     "            print(iterations)\n",
-    "            return np.diagonal(a)\n",
+    "            return np.diagonal(a), pQ\n",
     "\n",
     "def get_v_vector(matrix, column):\n",
     "    v = np.zeros(shape[0])\n",
@@ -772,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -780,24 +781,21 @@
      "text": [
       "eigenvalues\n",
       "iterations:\n",
-      "19\n",
-      "[9.348 3.73  1.921]\n"
+      "23\n",
+      "[ 6.384  3.839 -1.224]\n",
+      "[-0.694  0.709  0.126],\n",
+      "[-0.55  -0.636  0.542],\n",
+      "[0.464 0.307 0.831],\n"
      ]
     }
    ],
    "source": [
     "print(\"eigenvalues\")\n",
-    "print(solve_qr(matrix_array, 0.00001))"
+    "values, vectors = solve_qr(matrix_array, 0.00001)\n",
+    "print(values)\n",
+    "for vector in vectors.T:\n",
+    "    print(vector, end=\",\\n\")"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
