NM1. Demidova approved

--- a/NM1/lab.ipynb
+++ b/NM1/lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 130,
    "id": "851371ef",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 131,
    "id": "69565d45",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 132,
    "outputs": [
     {
      "name": "stdout",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 133,
    "outputs": [],
    "source": [
     "def decompose_column(matrix, column):\n",
@@ -89,7 +89,7 @@
     "            matrix[[column, row]] = matrix[[row, column]]\n",
     "            return column, row\n",
     "\n",
-    "def decompose_matrix_with_gauss(matrix):\n",
+    "def decompose_matrix_with_lu(matrix):\n",
     "    print(\"original memory\")\n",
     "    print(matrix.nbytes)\n",
     "    b_column_to_swap = np.copy(matrix[:, shape[1] - 1].reshape(shape[0], 1))\n",
@@ -135,7 +135,7 @@
     "\n",
     "\n",
     "def solve_with_lu(matrix):\n",
-    "    u_matrix, swapped_b_column = decompose_matrix_with_gauss(matrix)\n",
+    "    u_matrix, swapped_b_column = decompose_matrix_with_lu(matrix)\n",
     "    log_matrix(u_matrix)\n",
     "    #lz_matrix = np.hstack((l_matrix, swapped_b_column))\n",
     "    u_matrix = np.delete(u_matrix, -1, axis=1)\n",
@@ -173,6 +173,16 @@
     "        l_matrix_value = (matrix[row, column] / matrix[column, column])\n",
     "        matrix[row, :] += matrix[column, :] * (-l_matrix_value)\n",
     "\n",
+    "def mym(a, b):\n",
+    "    result = np.zeros(shape = (a.shape[0], b.shape[1]))\n",
+    "\n",
+    "    for i in range(len(a)):\n",
+    "     for j in range(len(b[0])):\n",
+    "      for k in range(len(b)):\n",
+    "       result[i][j] += a[i][k] * b[k][j]\n",
+    "\n",
+    "    return result\n",
+    "\n",
     "\n",
     "def log_matrix(u_matrix):\n",
     "    print(\"u matrix\")\n",
@@ -185,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 134,
    "outputs": [
     {
      "name": "stdout",
@@ -236,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 135,
    "outputs": [
     {
      "name": "stdout",
@@ -261,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 136,
    "outputs": [],
    "source": [
     "def solve_sweep(matrix):\n",
@@ -291,10 +301,30 @@
     "    return np.array(answer)\n",
     "\n",
     "def check_tri_diagonal_dominance(matrix):\n",
+    "    equal_signs = 0\n",
+    "    more_than_signs = 0\n",
     "    for i in range(shape[0]):\n",
-    "        if abs(b_i(matrix, i)) < (abs(a_i(matrix, i)) + abs(c_i(matrix, i))):\n",
+    "        if more(matrix, i):\n",
+    "            more_than_signs += 1\n",
+    "            continue\n",
+    "        if equal(matrix, i):\n",
+    "            if i == 0 or i == (shape[0] - 1):\n",
+    "                return False\n",
+    "            equal_signs += 1\n",
+    "            continue\n",
+    "        if less(matrix, i):\n",
     "            return False\n",
-    "    return True\n",
+    "\n",
+    "    return more_than_signs > equal_signs\n",
+    "\n",
+    "def less(matrix, i):\n",
+    "    return abs(b_i(matrix, i)) < (abs(a_i(matrix, i)) + abs(c_i(matrix, i)))\n",
+    "\n",
+    "def equal(matrix, i):\n",
+    "    return abs(b_i(matrix, i)) == (abs(a_i(matrix, i)) + abs(c_i(matrix, i)))\n",
+    "\n",
+    "def more(matrix, i):\n",
+    "     return abs(b_i(matrix, i)) > (abs(a_i(matrix, i)) + abs(c_i(matrix, i)))\n",
     "\n",
     "def p_i(matrix, i, p):\n",
     "    return -c_i(matrix, i) / (b_i(matrix, i) + a_i(matrix, i) * p[i - 1])\n",
@@ -327,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 137,
    "outputs": [
     {
      "name": "stdout",
@@ -359,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 138,
    "outputs": [
     {
      "name": "stdout",
@@ -383,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 139,
    "outputs": [],
    "source": [
     "def check_diagonal_dominance(matrix):\n",
@@ -461,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 140,
    "outputs": [
     {
      "name": "stdout",
@@ -494,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 141,
    "outputs": [],
    "source": [
     "def solve_zeidel(matrix, eps):\n",
@@ -527,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 142,
    "outputs": [
     {
      "name": "stdout",
@@ -560,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 143,
    "outputs": [
     {
      "name": "stdout",
@@ -583,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 144,
    "outputs": [],
    "source": [
     "def solve_rotations(matrix, eps):\n",
@@ -598,7 +628,7 @@
     "        max_element = a[i, j]\n",
     "        phi = 1/2 * np.arctan(2*max_element / (a[i, i] - a[j, j]))\n",
     "        rotation_matrix = build_rotation_matrix((i, j), shape[0], phi)\n",
-    "        a_k = np.matmul(np.matmul(rotation_matrix.T, a), rotation_matrix)\n",
+    "        a_k = mym(mym(rotation_matrix.T, a), rotation_matrix)\n",
     "        if is_accuracy_achieved(a_k, eps):\n",
     "            return np.diagonal(a_k), get_eigenvectors(rotation_matrices), iterations\n",
     "        else:\n",
@@ -635,7 +665,7 @@
     "    result = rotation_matrices[0]\n",
     "    if len(rotation_matrices) > 1:\n",
     "        for i in range(1, len(rotation_matrices)):\n",
-    "            result = np.matmul(result, rotation_matrices[i])\n",
+    "            result = mym(result, rotation_matrices[i])\n",
     "\n",
     "    return result"
    ],
@@ -645,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 145,
    "outputs": [
     {
      "name": "stdout",
@@ -687,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 146,
    "outputs": [
     {
      "name": "stdout",
@@ -710,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 147,
    "outputs": [],
    "source": [
     "def solve_qr(matrix, eps):\n",
@@ -725,11 +755,11 @@
     "            v = get_v_vector(r, column)\n",
     "            h = get_householder_matrix(v)\n",
     "            h_matrices.append(h)\n",
-    "            r = np.matmul(h, r)\n",
+    "            r = mym(h, r)\n",
     "\n",
-    "        q = multiply_matrices(h_matrices)\n",
-    "        a = np.matmul(r, q)\n",
-    "        pQ = np.matmul(pQ, q)\n",
+    "        q = muliply_matrices(h_matrices)\n",
+    "        a = mym(r, q)\n",
+    "        pQ = mym(pQ, q)\n",
     "        if is_accuracy_achieved(a, eps):\n",
     "            print(\"iterations:\")\n",
     "            print(iterations)\n",
@@ -743,21 +773,21 @@
     "\n",
     "def get_householder_matrix(v):\n",
     "    e = np.identity(v.shape[0])\n",
-    "    return e - 2 * np.matmul(v, v.T)/np.matmul(v.T, v)\n",
+    "    return e - 2 * mym(v, v.T)/mym(v.T, v)\n",
     "\n",
-    "def multiply_matrices(matrices):\n",
+    "def muliply_matrices(matrices):\n",
     "    result = matrices[0]\n",
     "    if len(matrices) > 1:\n",
     "        for i in range(1, len(matrices)):\n",
-    "            result = np.matmul(result, matrices[i])\n",
+    "            result = mym(result, matrices[i])\n",
     "\n",
     "    return result\n",
     "\n",
-    "def multiply_reversed(matrices):\n",
+    "def muliply_reversed(matrices):\n",
     "    result = matrices[-1]\n",
     "    if len(matrices) > 1:\n",
     "        for i in reversed(range(0, len(matrices) - 1)):\n",
-    "            result = np.matmul(result, matrices[i])\n",
+    "            result = mym(result, matrices[i])\n",
     "\n",
     "    return result\n",
     "\n",
@@ -773,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 148,
    "outputs": [
     {
      "name": "stdout",
@@ -796,6 +826,15 @@
     "for vector in vectors.T:\n",
     "    print(vector, end=\",\\n\")"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
